--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Portfolio Website",
   "version": "1.0.0",
-  "description": "Brian's Portfolio",
+  "description": "Brian Portfolio",
   "scripts": {
     "dev": "next dev -H 0.0.0.0",
     "build": "next build",
