--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "PortfolioWebsite",
+  "name": "portfoliowebsite",
   "version": "1.0.0",
   "description": "BrianPortfolio",
   "scripts": {
